--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Released   : 20140221
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Retention</title>
+<title>Challenge CdCMx Team 18</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" />
@@ -28,8 +28,8 @@ Released   : 20140221
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo">
-				<h1><a href="#">Retention</a></h1>
-				<p>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></p>
+				<h1><a href="#">Challenge CdCMx</a></h1>
+				<p><a href="https://www.facebook.com/frediie.a.santos">Team 18</a></p>
 			</div>
 			<div id="banner"> <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> </div>
 		</div>
@@ -39,7 +39,6 @@ Released   : 20140221
 			<ul>
 				<li class="current_page_item"><a href="#">Homepage</a></li>
 				<li><a href="#">About</a></li>
-				<li><a href="#">Blog</a></li>
 				<li><a href="#">Portfolio</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
@@ -49,10 +48,10 @@ Released   : 20140221
 	<div id="page" class="container">
 		<div id="content">
 			<div class="title">
-				<h2>Integer sit amet aliquet</h2>
-				<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-			<p>This is <strong>Retention</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-			<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. </p>
+				<h2>De moléculas a terapéuticos: Cómo enfrentar a los virus con ciencia y tecnología</h2>
+				<span class="byline">Interacción de los fármacos con proteasas de SARS-CoV-2</span> </div>
+			<p> Esta es la página web del equipo 18 que participa en el <strong>Challenge de Clubes de Ciencia 2020</strong>, en esta página encontrará información acerca de la interacción de los fármacos aprobados por la <p> <a href="https://www.fda.gov/about-fda">FDA</a> </p> así mismo encontrará información sobre... AQUI EMPEZAMOS A PONER LA INFORMACIÓN esta página está diseñada por <a href="https://www.fda.gov/about-fda">Equipo 18</a>.</p>
+			<p> EN ESTA PARTE TAMBIEN SE PUEDE PONER LA INFORMACION... </p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
@@ -76,28 +75,28 @@ Released   : 20140221
 		<div id="portfolio" class="container">
 			<div id="column1">
 				<div class="title">
-					<h2>Suspendisse lacus</h2>
+					<h2>Valeria</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column2">
 				<div class="title">
-					<h2>Fusce ultrices</h2>
+					<h2>Naomi</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column3">
 				<div class="title">
-					<h2>Etiam posuere</h2>
+					<h2>Ximena</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column4">
 				<div class="title">
-					<h2>Mauris vulputate</h2>
+					<h2>Fredie</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
