--- a/index.html
+++ b/index.html
@@ -56,16 +56,14 @@ Released   : 20140221
 		<div id="sidebar">
 			<div class="box2">
 				<div class="title">
-					<h2>Integer gravida</h2>
+					<h2>índice</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-					<li><a href="#">Ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Consequat etiam lorem phasellus</a></li>
+					<li><a href="#">Introducción</a></li>
+					<li><a href="#">Desarrollo</a></li>
+					<li><a href="#">Conclusión</a></li>
+					<li><a href="#">Referencias</a></li>
+					<li><a href="#">Anexos</a></li>
 				</ul>
 			</div>
 		</div>
