--- a/index.html
+++ b/index.html
@@ -50,20 +50,23 @@ Released   : 20140221
 			<div class="title">
 				<h2>De moléculas a terapéuticos: Cómo enfrentar a los virus con ciencia y tecnología</h2>
 				<span class="byline">Interacción de los fármacos con proteasas de SARS-CoV-2</span> </div>
-			<p> Esta es la página web del equipo 18 que participa en el <strong>Challenge de Clubes de Ciencia 2020</strong>, en esta página encontrará información acerca de la interacción de los fármacos aprobados por la <p> <a href="https://www.fda.gov/about-fda">FDA</a> </p> así mismo encontrará información sobre... AQUI EMPEZAMOS A PONER LA INFORMACIÓN esta página está diseñada por <a href="https://www.fda.gov/about-fda">Equipo 18</a>.</p>
+			<p> El coronavirus pertenece a una familia de virus que fue descubierta en la década de los 60. Esta familia de virus, cuyo origen es aún desconocido, pueden provocar desde un ligero resfriado hasta enfermedades más graves, un claro ejemplo de esto es el coronavirus que ocasiona el síndrome respiratorio de Oriente Medio (MERS-CoV), así como el que ocasiona el síndrome respiratorio agudo severo (SARS-CoV).<p>
+  			</p> así mismo encontrará información sobre... AQUI EMPEZAMOS A PONER LA INFORMACIÓN esta página está diseñada por <a href="https://www.fda.gov/about-fda">Equipo 18</a>.</p>
 			<p> EN ESTA PARTE TAMBIEN SE PUEDE PONER LA INFORMACION... </p>
 		</div>
 		<div id="sidebar">
 			<div class="box2">
 				<div class="title">
-					<h2>índice</h2>
+					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introducción</a></li>
-					<li><a href="#">Desarrollo</a></li>
-					<li><a href="#">Conclusión</a></li>
-					<li><a href="#">Referencias</a></li>
-					<li><a href="#">Anexos</a></li>
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
 				</ul>
 			</div>
 		</div>
