--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ Released   : 20140221
 			<div class="title">
 				<h2>De moléculas a terapéuticos: Cómo enfrentar a los virus con ciencia y tecnología</h2>
 				<span class="byline">Interacción de los fármacos con proteasas de SARS-CoV-2</span> </div>
-					<p>Introducción<p>
+					</p>Introducción<p>
 					<p> El coronavirus pertenece a una familia de virus que fue descubierta en la década de los 60. Esta familia de virus, cuyo origen es aún desconocido, pueden provocar desde un ligero resfriado hasta enfermedades más graves, un claro ejemplo de esto es el coronavirus que ocasiona el síndrome respiratorio de Oriente Medio (MERS-CoV), así como el que ocasiona el síndrome respiratorio agudo severo (SARS-CoV).<p>
   					<p> La mayoría de los coronavirus no son peligrosos y se pueden tratar de forma rápida y eficaz. Un gran porcentaje de las personas suele contraer algún tipo de coronavirus en algún momento de su vida, generalmente durante la infancia.</p>
 					<p> El nombre que se le da a este virus surge debido al aspecto que presenta, ya que es muy parecido a una corona solar o un halo. Se sabe que este virus se presenta con mayor frecuencia en animales, pero también puede presentarse en humanos.</p>
 					<p> En diciembre de 2019, se presentó en Wuhan (provincia de Hubei de la República Popular China) un brote de neumonía de causa desconocida y desde entonces se ha extendido a nivel mundial. Debido a esta situación se llevó a cabo una investigación por todo el país y como resultado de ello, las autoridades de Wuhan informaron a la OMS sobre la presencia de 27 casos de Síndrome Respiratorio Agudo.Antes estos eventos, un grupo de científicos chinos aislaron una nueva cepa de este coronavirus y la pusieron a disposición de la OM, facilitando así  a los laboratorios de diferentes países la producción de pruebas diagnósticas de PCR específicas para detectar la nueva infección.<p>
-
+					<p> Más tarde se descubrió que el virus aislado pertenece a los Betacoronavirus del grupo 2B y cuenta con al menos un 70% de similitud en la secuencia genética con el SARS-CoV, el cual fue nombrado por la OMS como 2019-nCoV.<p>
 		
 		
 		
