--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@ Released   : 20140221
 					<p>///<p>
 					<p> En el artículo consultado para la reproducción de las figuras, Bafna, Krug & Montelione, (2020) consideran que para poder controlar la pandemia actual de Covid-19 se requieren tanto vacunas como antivirales. Se menciona que estos últimos pueden tardar un periodo de tiempo considerable por lo que se ha empezado a probar la eficacia de tratamientos existentes en el mercado para tratar esta enfermedad.<p>
 					<p> Durante esta investigación se centraron en los antivirales que atacan la proteasa Mpro y encontraron que tiene gran semejanza con la proteasa NS3 / 4A del virus de la hepatitis C (VHC).<p>
-		
+					</p> Figura 1<p>
+					<p> La principal proteasa de SARS-CoV2 (Mpro) es una cisteína proteasa homodimérica de 67,6 kDa. Tiene aproximadamente un 97% de identidad de secuencia con la correspondiente Mpro proteasa del virus SARS-CoV responsable de la pandemia del SARS de 2003.<p>
+					<p> En ambas Mpro, las proteasas contienen tres dominios similares. Los dominios I y II adoptan un doble pliegue de barril β, con el sitio de unión del sustrato ubicado en una hendidura poco profunda entre dos barriles β antiparalelos del dominio I y II (Figura 1). Ambas proteasas Mpro también tienen un dominio de haz helicoidal C terminal adicional (Dominio III) que aparentemente estabiliza sus formas homodímeras activas.<p>
+					<p> (Figura 1)<p>
+
+
 		
 		</div>
 		<div id="sidebar">
@@ -79,11 +84,13 @@ Released   : 20140221
 					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introducción</a></li>
-					<li><a href="#">Desarrollo</a></li>
-					<li><a href="#">Conclusión</a></li>
-					<li><a href="#">Referencias</a></li>
-					<li><a href="#">Anexos</a></li>
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
 				</ul>
 			</div>
 		</div>
