--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@ Released   : 20140221
 			<div class="title">
 				<h2>De moléculas a terapéuticos: Cómo enfrentar a los virus con ciencia y tecnología</h2>
 				<span class="byline">Interacción de los fármacos con proteasas de SARS-CoV-2</span> </div>
-					</p>Introducción<p>
+					</p> ///Introducción<p>
 					<p> El coronavirus pertenece a una familia de virus que fue descubierta en la década de los 60. Esta familia de virus, cuyo origen es aún desconocido, pueden provocar desde un ligero resfriado hasta enfermedades más graves, un claro ejemplo de esto es el coronavirus que ocasiona el síndrome respiratorio de Oriente Medio (MERS-CoV), así como el que ocasiona el síndrome respiratorio agudo severo (SARS-CoV).<p>
   					<p> La mayoría de los coronavirus no son peligrosos y se pueden tratar de forma rápida y eficaz. Un gran porcentaje de las personas suele contraer algún tipo de coronavirus en algún momento de su vida, generalmente durante la infancia.</p>
 					<p> El nombre que se le da a este virus surge debido al aspecto que presenta, ya que es muy parecido a una corona solar o un halo. Se sabe que este virus se presenta con mayor frecuencia en animales, pero también puede presentarse en humanos.</p>
 					<p> En diciembre de 2019, se presentó en Wuhan (provincia de Hubei de la República Popular China) un brote de neumonía de causa desconocida y desde entonces se ha extendido a nivel mundial. Debido a esta situación se llevó a cabo una investigación por todo el país y como resultado de ello, las autoridades de Wuhan informaron a la OMS sobre la presencia de 27 casos de Síndrome Respiratorio Agudo.Antes estos eventos, un grupo de científicos chinos aislaron una nueva cepa de este coronavirus y la pusieron a disposición de la OM, facilitando así  a los laboratorios de diferentes países la producción de pruebas diagnósticas de PCR específicas para detectar la nueva infección.<p>
 					<p> Más tarde se descubrió que el virus aislado pertenece a los Betacoronavirus del grupo 2B y cuenta con al menos un 70% de similitud en la secuencia genética con el SARS-CoV, el cual fue nombrado por la OMS como 2019-nCoV.<p>
-					</p> CoV<p>
+					</p> ///CoV<p>
 					<p> Los coronavirus (CoV) constituyen un amplio grupo de virus que se encuadran  en la subfamilia Coronavirinae dentro de la familia Coronaviridae; se clasifican bajo el término coronavirus todas los virus pertenecientes a los géneros Alphacoronavirus, Betacoronavirus, Gammacoronavirus   y   Deltacoronavirus.  (Argote, 2020)<p>
 					<p> El genoma de este virus está conformado por una sola cadena de ARN de polaridad positiva y cuenta con alrededor de 30.000 pares de bases.<p>
 					<p> Los coronavirus, incluido el SARS-CoV2, son virus envueltos. Su genoma está compuesto por un único ARN monocatenario de sentido positivo grande (27-34 kilobase), que es traducido directamente por las células huésped. El genoma del SARS-CoV2 codifica 4 proteínas estructurales, 16 proteínas no estructurales (NSP) que llevan a cabo funciones intracelulares cruciales y 9 proteínas accesorias.<p>
 					<p> Muchas de estas proteínas, y sus socios de unión al hospedador son objetivos potenciales para el desarrollo de terapias antivirales para COVID-19.<p>
 					<p> La traducción del ARN viral da como resultado la síntesis de dos poliproteínas que son procesadas por dos cisteína proteasas codificadas por virus, la proteasa tipo papaína (PLpro ) y la proteasa similar a 3C (3CLpro) que también se conoce como proteína no estructural 5 (NSP5) o como proteasa principal (Mpro ).<p>
-					</p> Problemática<p>
+					</p> ///Problemática<p>
 					<p> Actualmente el mundo se encuentra en una pandemia causada por el virus SARS-CoV2 que ha ocasionado muchas muertes alrededor del mundo, sin embargo aún no se cuenta con vacunas o antivirales para su tratamiento; una problemática secundaria sugiere que el desarrollo de éste último es un largo proceso que requiere de mucho tiempo.<p>
-					</p>  Proteasa Mpro<p>
+					</p> ///Proteasa Mpro<p>
 					<p> La proteasa principal Mpro conforma uno de los objetivos farmacológicos para el desarrollo de antivirales entre los coronavirus. Junto con las proteasas similares a la papaína, esta enzima es esencial para procesar las poliproteínas que se traducen del ARN viral. El Mpro opera en no menos de 11 sitios de escisión en la poliproteína replicasa, liberando 13 proteínas no estructurales (Nsp4 a Nsp16) durante la replicación del virus. La secuencia de reconocimiento en los sitios de escisión es Leu-Gln ↓ (Ser, Ala, Gly) donde “↓” marca el sitio de escisión (Wu et al., 2020).<p>
 					<p> Puesto que Mpro es una proteasa indispensable para la replicación del virus que no se ha detectado en las células humanas, inhibir la actividad de esta enzima bloquearía la replicación viral. Debido a que no se conocen proteasas humanas con una especificidad de escisión similar, es poco probable que tales inhibidores sean tóxicos (Zhang et al., 2020).<p>
 					<p>///<p>
 					<p> En el artículo consultado para la reproducción de las figuras, Bafna, Krug & Montelione, (2020) consideran que para poder controlar la pandemia actual de Covid-19 se requieren tanto vacunas como antivirales. Se menciona que estos últimos pueden tardar un periodo de tiempo considerable por lo que se ha empezado a probar la eficacia de tratamientos existentes en el mercado para tratar esta enfermedad.<p>
 					<p> Durante esta investigación se centraron en los antivirales que atacan la proteasa Mpro y encontraron que tiene gran semejanza con la proteasa NS3 / 4A del virus de la hepatitis C (VHC).<p>
-					</p> Figura 1<p>
+					</p> ///Figura 1<p>
 					<p> La principal proteasa de SARS-CoV2 (Mpro) es una cisteína proteasa homodimérica de 67,6 kDa. Tiene aproximadamente un 97% de identidad de secuencia con la correspondiente Mpro proteasa del virus SARS-CoV responsable de la pandemia del SARS de 2003.<p>
 					<p> En ambas Mpro, las proteasas contienen tres dominios similares. Los dominios I y II adoptan un doble pliegue de barril β, con el sitio de unión del sustrato ubicado en una hendidura poco profunda entre dos barriles β antiparalelos del dominio I y II (Figura 1). Ambas proteasas Mpro también tienen un dominio de haz helicoidal C terminal adicional (Dominio III) que aparentemente estabiliza sus formas homodímeras activas.<p>
 					<p> (Figura 1)<p>
