--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Released   : 20140221
 				<div class="title">
 					<h2>Valeria</h2>
 				</div>
-				<a href="#" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="https://raw.githubusercontent.com/Fredie03/Challenge_CdCMx_Team18/master/images/Image_Ximena.jpeg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column2">
