--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Released   : 20140221
 		<div id="sidebar">
 			<div class="box2">
 				<div class="title">
-					<h2>Integer gravida</h2>
+					<h2>íNDICE</h2>
 				</div>
 				<ul class="style2">
 					<li><a href="#">Introducción</a></li>
