--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@ Released   : 20140221
 					<p> La principal proteasa de SARS-CoV2 (Mpro) es una cisteína proteasa homodimérica de 67,6 kDa. Tiene aproximadamente un 97% de identidad de secuencia con la correspondiente Mpro proteasa del virus SARS-CoV responsable de la pandemia del SARS de 2003.<p>
 					<p> En ambas Mpro, las proteasas contienen tres dominios similares. Los dominios I y II adoptan un doble pliegue de barril β, con el sitio de unión del sustrato ubicado en una hendidura poco profunda entre dos barriles β antiparalelos del dominio I y II (Figura 1). Ambas proteasas Mpro también tienen un dominio de haz helicoidal C terminal adicional (Dominio III) que aparentemente estabiliza sus formas homodímeras activas.<p>
 					<p> (Figura 1)<p>
+					<p> /// Figura 2 (Bafna, Krug & Montelione, 2020)<p>
+					<p> PDB: 6Y2F<p>
+					<p> (Figura 2) <p>
+					<p> /// Figura 3 (Replica)<p>
+					<p> PDB: 2P59                                                                 PDB: 4LL3<p>
+					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a>(https://www.rcsb.org/)<a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
+
+
 
 
 		
@@ -81,14 +89,16 @@ Released   : 20140221
 		<div id="sidebar">
 			<div class="box2">
 				<div class="title">
-					<h2>íNDICE</h2>
+					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introducción</a></li>
-					<li><a href="#">Desarrollo</a></li>
-					<li><a href="#">Conclusión</a></li>
-					<li><a href="#">Referencias</a></li>
-					<li><a href="#">Anexos</a></li>
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
 				</ul>
 			</div>
 		</div>
@@ -98,21 +108,21 @@ Released   : 20140221
 		<div id="portfolio" class="container">
 			<div id="column1">
 				<div class="title">
-					<h2>Ximena</h2>
+					<h2>Valeria</h2>
 				</div>
-				<a href="#" class="image image-full"><img src="https://raw.githubusercontent.com/Fredie03/Challenge_CdCMx_Team18/master/images/Image_Ximena.jpeg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column2">
 				<div class="title">
 					<h2>Naomi</h2>
 				</div>
-				<a href="#" class="image image-full"><img src="https://raw.githubusercontent.com/Fredie03/Challenge_CdCMx_Team18/master/images/Image_Naomi.jpeg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column3">
 				<div class="title">
-					<h2>Valeria</h2>
+					<h2>Ximena</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
