--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Released   : 20140221
 					<p> (Figura 2) <p>
 					<p> /// Figura 3 (Replica)<p>
 					<p> PDB: 2P59                                                                 PDB: 4LL3<p>
-					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a href= "https://www.rcsb.org/">Link</a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
+					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a href= "https://www.rcsb.org/">(Link)</a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
 
 
 
