--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ Released   : 20140221
 					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Introduccion</a></li>
+					<li><a href="#">Desarollo</a></li>
 					<li><a href="#">Semper mod quis eget mi dolore</a></li>
 					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
 					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
