--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ Released   : 20140221
 				<ul class="style2">
 					<li><a href="#">Introduccion</a></li>
 					<li><a href="#">Desarollo</a></li>
-					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-					<li><a href="#">Consequat etiam lorem phasellus</a></li>
+					<li><a href="#">Semper</a></li>
+					<li><a href="#">Quam</a></li>
+					<li><a href="#">Amet</a></li>
+					<li><a href="#">Quam</a></li>
+					<li><a href="#">Consequat</a></li>
 				</ul>
 			</div>
 		</div>
