--- a/index.html
+++ b/index.html
@@ -80,10 +80,25 @@ Released   : 20140221
 					<h3> Figura 3 (Replica)</h3>
 					<p> PDB: 2P59 y PDB: 4LL3<p>
 					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a href= "https://www.rcsb.org/">(Link)</a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
-
-
-
-
+					<p> Lo que se puede observar en la figura 2 es que se crea una comparación entre las proteasas del A) SARS-CoV2 Mpro (PDB id 6Y2G), B) HCV protease NS3/4A (PDB id 2P59) y C) HIV-1 protease (PDB id 4LL3). En “A” la zona más importante se encuentra entre el dominio I y el dominio II, se conoce como sitio activo; es el lugar donde va a llegar la cadena polipeptídica a la proteasa y esta va a poder cortar, los dos aminoácidos claves son His41 / Cys145. El sitio activo se divide en 6 partes.<p>
+					<p> Ambos tienen una arquitectura de pliegue de doble barril β, con un sitio de unión al sustrato ubicado en una hendidura poco profunda entre dos barriles beta antiparalelos (mostrados en cian y azul).<p>
+					<p> Solo se muestra un protómero para A y B. El dominio de hélice α III de Mpro se muestra en verde. La proteasa del VIH tiene una arquitectura de pliegues diferente y el sitio de unión del sustrato se encuentra entre los dos protómeros. Para la proteasa del VIH-1 se muestran ambos protómeros. Las estructuras de los inhibidores unidos en estas estructuras cristalinas se ilustran como barras magenta.<p>
+					<p> Las arquitecturas de pliegues de los Dominios I y II de las proteasas CoV Mpro son similares a las de las proteasas de tipo quimotripsina y la familia 3C de proteasas virales. Anand y col.  describieron previamente las similitudes estructurales entre los sitios activos de la proteasa Mpro del coronavirus de gastroenteritis transmisible (TGEV) y la proteasa 3C del virus de la hepatitis A. Nuestra búsqueda de similitud estructural tridimensional del Protein Data Bank con los dominios I y II (excluyendo el dominio III) de la proteasa Mpro del SARS-CoV2 como la consulta estructural tridimensional, identificó varios 3C proteasas virales similares, incluida la proteasa HCV NS3 / 4A, como estructuralmente similares. Estas dos estructuras tienen una puntuación Z de similitud estructural = +8,4. Al igual que M pro, la proteasa HCV NS3 / 4A también tiene un doble pliegue de barril β, con orientaciones relativas similares a las de las proteasas SARS-CoV Mpro, y un sitio de unión al sustrato ubicado en una hendidura poco profunda entre sus dos seis a ocho - Barriles β antiparalelos trenzados.<p>
+					<p> La superposición de las estructuras de la columna vertebral de estas dos proteasas también da como resultado la superposición de sus bolsas de unión de sustrato y sus residuos catalíticos del sitio activo, His41 / Cys145 e His57 / Ser139 de las proteasas SARS-CoV2 Mpro y HCV NS3 / 4A, respectivamente. En otras palabras, si-- nos referimos a la búsqueda de tratamientos para el  SARS-CoV 2 debido a la relación con la Hepatitis C en su sitio activo, se podrían utilizar fármacos los cuales han sido utilizados para tratar dicho padecimiento.<p>
+					<h3> Figura 4</h3>
+					<p> (Figura 4)<p>
+					<p> En el artículo consultado (Bafna, Krug & Montelione, 2020) se habla del reciente desarrollo de un inhibidor denominado 13b (que podemos observar en la figura 4) del virus SARS-CoV2, basada en la estructura cristalina  tridimensional de su proteasa. Este inhibidor se une al sitio activo de la proteasa Mpro, creando interacciones con enlaces de hidrógeno con amidas de la cadena principal de residuos clave en el agujero de oxianión.<p>
+					<p> Para la replicación de esta figura (4) lo primero que hicimos fue descargar el formato PDB de la proteasa principal del SARS-CoV2, misma que encontramos en el <a href= "https://www.rcsb.org/structure/6Y2F">(Protein Data Bank)</a> con el código 6Y2F, luego con la ayuda de la aplicación PyMol abrimos la imágen y la mostramos en modo “surface” de color gris, después seleccionamos los residuos O6K (ligando) y los mostramos de modo “stick” en colores por elemento.<p>
+					<p> ///<p>
+					<p> La interrupción del diálogo entre virus y hospedador es una posible intervención terapéutica que puede detener la infección viral.  Al entrar a la célula huésped, el SARS-CoV-2 libera dos cisteína proteasas virales, la PLpro y la 3CLpro, que son de importancia crítica para la replicación viral (Maiti, 2020). Por lo tanto, estas proteasas son objetivos potenciales para el desarrollo de fármacos anti-CoV-2 que pueden detener la replicación viral. Sin embargo, la información actual sobre CoV-2 PLpro es significativamente singular, debido a esto en la investigación realizada por Maiti, se observa un inhibidor potencial de CoV-2 PLpro dirigido a tiol que puede bloquear los residuos de Cys conservados en un sitio Zn lábil putativo y/o el sitio catalítico de CoV-2 PLpro, lo que conduce a la disfunción de CoV-2 PLpro y, por lo tanto, impide la progresión de la replicación viral.<p>
+					<p> La estructura cristalina de CoV-2 PLpro se obtuvo de <a href= "https://www.wwpdb.org/pdb?id=pdb_00006w9c">(Pdb)</a> cuyo código en el Protein Data Bank es  6W9C, misma estructura que se presenta en la Figura 5. La estructura se replicó y posteriormente se realizó una animación con el programa PyMOL, en esta animación se aprecia que CoV-2 PLpro alberga 3 dominios; dominio de escisión catalítica, dominio de unión a Zn lábil y dominio de ubiquitina.<p>
+					<p> (FIgura 5)
+					<p> Figura 5. Réplica de estructura cristalina de SARS-CoV-2 PL pro<p>
+					<p> Poreba y col. (2020) desarrollaron pequeños péptidos diseñados racionalmente como inhibidores basados en sustratos de PLpro de los virus de la familia del SARS y exhiben una alta selectividad hacia la unión de PLpro, lo que resulta en interferencia de la replicación viral. Así mismo, Rut y col. (2020) reportaron dos tetrapéptidos como inhibidores de CoV-2 PLpro que inhiben fuertemente la replicación viral in vitro y líneas celulares, estos tetrapéptidos son VIR250 y VIR251.<p>
+					<p> El tetrapéptido VIR251 tiene una eficacia más potente pero una selectividad relativamente menor hacia la unión de CoV PLpro que el VIR250. Esto último, se cree que se debe a la diferente orientación de homotirosina (hTyr) respecto a Abu (Bth) en el sitio catalítico.<p>
+					<p> La estructura cristalina del complejo VIR251 unido a CoV-2 PLpro mostrada en la Figura 6, proporciona un mapa completo del sitio activo con inhibidor, esto puede orientar el diseño y desarrollo de fármacos anti-COVID-19 basados en sustratos con potente eficacia y alta selectividad. <p>
+					
+ 
 		
 		</div>
 		<div id="sidebar">
@@ -92,13 +107,13 @@ Released   : 20140221
 					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introduccion</a></li>
-					<li><a href="#">Desarollo</a></li>
-					<li><a href="#">Semper</a></li>
-					<li><a href="#">Quam</a></li>
-					<li><a href="#">Amet</a></li>
-					<li><a href="#">Quam</a></li>
-					<li><a href="#">Consequat</a></li>
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
 				</ul>
 			</div>
 		</div>
