--- a/index.html
+++ b/index.html
@@ -112,24 +112,28 @@ Released   : 20140221
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column2">
 				<div class="title">
 					<h2>Naomi</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column3">
 				<div class="title">
 					<h2>Ximena</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 			<div id="column4">
 				<div class="title">
 					<h2>Fredie</h2>
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 		</div>
 	</div>
 
