--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Released   : 20140221
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
-				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
+				<a href="#" class="icon icon-plus-sign button">fredie03@☺outlook.com</a> </div>
 		</div>
 	</div>
 
