--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ Released   : 20140221
 					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introduccion</a></li>
-					<li><a href="#">Desarollo</a></li>
+					<li><a href="#">Introducción</a></li>
+					<li><a href="#">CoV</a></li>
 					<li><a href="#">Semper</a></li>
 					<li><a href="#">Quam</a></li>
 					<li><a href="#">Amet</a></li>
