--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Released   : 20140221
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
-				<a href="#" class="icon icon-plus-sign button"><p><a href="https://www.facebook.com/frediie.a.santos">Contacto</a></p></a> </div>
+				<a href="https://www.facebook.com/frediie.a.santos" class="icon icon-plus-sign button">Contacto</a> </div>
 		</div>
 	</div>
 
