--- a/index.html
+++ b/index.html
@@ -79,11 +79,62 @@ Released   : 20140221
 					<p> (Figura 2) <p>
 					<h3> Figura 3 (Replica)</h3>
 					<p> PDB: 2P59 y PDB: 4LL3<p>
-					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a href= "https://www.rcsb.org/">(Link)</a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
+					<p> La replicación de estas figuras fue con ayuda de un formato PDB de la proteasa principal de SARS-CoV2 Mpro (PDB id 6Y2G), HCV protease NS3/4A (PDB id 2P59) y HIV-1 protease (PDB id 4LL3); este formato se puede encontrar en el Protein Data Bank <a href= "https://www.rcsb.org/">(LINK)</a> Después en Pymol se abre dicha proteasa introduciendo > fetch + el código de PDB > enter , para que se pueda visualizar, comenzando  la reproducción de las figuras 2 y 3. Para agregar texto a la figura 2 fue necesario utilizar power point.<p>
+					<p> Lo que se puede observar en la figura 2 es que se crea una comparación entre las proteasas del A) SARS-CoV2 Mpro (PDB id 6Y2G), B) HCV protease NS3/4A (PDB id 2P59) y C) HIV-1 protease (PDB id 4LL3). En “A” la zona más importante se encuentra entre el dominio I y el dominio II, se conoce como sitio activo; es el lugar donde va a llegar la cadena polipeptídica a la proteasa y esta va a poder cortar, los dos aminoácidos claves son His41 / Cys145. El sitio activo se divide en 6 partes.<p>
+					<p> Ambos tienen una arquitectura de pliegue de doble barril β, con un sitio de unión al sustrato ubicado en una hendidura poco profunda entre dos barriles beta antiparalelos (mostrados en cian y azul).<p>
+					<p> Solo se muestra un protómero para A y B. El dominio de hélice α III de Mpro se muestra en verde. La proteasa del VIH tiene una arquitectura de pliegues diferente y el sitio de unión del sustrato se encuentra entre los dos protómeros. Para la proteasa del VIH-1 se muestran ambos protómeros. Las estructuras de los inhibidores unidos en estas estructuras cristalinas se ilustran como barras magenta.<p>
+					<p> Las arquitecturas de pliegues de los Dominios I y II de las proteasas CoV Mpro son similares a las de las proteasas de tipo quimotripsina y la familia 3C de proteasas virales. Anand y col.  describieron previamente las similitudes estructurales entre los sitios activos de la proteasa Mpro del coronavirus de gastroenteritis transmisible (TGEV) y la proteasa 3C del virus de la hepatitis A. Nuestra búsqueda de similitud estructural tridimensional del Protein Data Bank con los dominios I y II (excluyendo el dominio III) de la proteasa Mpro del SARS-CoV2 como la consulta estructural tridimensional, identificó varios 3C proteasas virales similares, incluida la proteasa HCV NS3 / 4A, como estructuralmente similares. Estas dos estructuras tienen una puntuación Z de similitud estructural = +8,4. Al igual que M pro, la proteasa HCV NS3 / 4A también tiene un doble pliegue de barril β, con orientaciones relativas similares a las de las proteasas SARS-CoV Mpro, y un sitio de unión al sustrato ubicado en una hendidura poco profunda entre sus dos seis a ocho - Barriles β antiparalelos trenzados.<p>
+					<p> La superposición de las estructuras de la columna vertebral de estas dos proteasas también da como resultado la superposición de sus bolsas de unión de sustrato y sus residuos catalíticos del sitio activo, His41 / Cys145 e His57 / Ser139 de las proteasas SARS-CoV2 Mpro y HCV NS3 / 4A, respectivamente. En otras palabras, si-- nos referimos a la búsqueda de tratamientos para el  SARS-CoV 2 debido a la relación con la Hepatitis C en su sitio activo, se podrían utilizar fármacos los cuales han sido utilizados para tratar dicho padecimiento.<p>
+					<h3> Figura 4</h3>
+					<p> (Figura 4)<p>
+					<p> En el artículo consultado (Bafna, Krug & Montelione, 2020) se habla del reciente desarrollo de un inhibidor denominado 13b (que podemos observar en la figura 4) del virus SARS-CoV2, basada en la estructura cristalina  tridimensional de su proteasa. Este inhibidor se une al sitio activo de la proteasa Mpro, creando interacciones con enlaces de hidrógeno con amidas de la cadena principal de residuos clave en el agujero de oxianión.<p>
+					<p> Para la replicación de esta figura (4) lo primero que hicimos fue descargar el formato PDB de la proteasa principal del SARS-CoV2, misma que encontramos en el <a href= "https://www.rcsb.org/structure/6Y2F">(Protein Data Bank)</a> con el código 6Y2F, luego con la ayuda de la aplicación PyMol abrimos la imágen y la mostramos en modo “surface” de color gris, después seleccionamos los residuos O6K (ligando) y los mostramos de modo “stick” en colores por elemento.<p>
+					<h3> Figura 5 </h3>
+					<p> La interrupción del diálogo entre virus y hospedador es una posible intervención terapéutica que puede detener la infección viral.  Al entrar a la célula huésped, el SARS-CoV-2 libera dos cisteína proteasas virales, la PLpro y la 3CLpro, que son de importancia crítica para la replicación viral (Maiti, 2020). Por lo tanto, estas proteasas son objetivos potenciales para el desarrollo de fármacos anti-CoV-2 que pueden detener la replicación viral. Sin embargo, la información actual sobre CoV-2 PLpro es significativamente singular, debido a esto en la investigación realizada por Maiti, se observa un inhibidor potencial de CoV-2 PLpro dirigido a tiol que puede bloquear los residuos de Cys conservados en un sitio Zn lábil putativo y/o el sitio catalítico de CoV-2 PLpro, lo que conduce a la disfunción de CoV-2 PLpro y, por lo tanto, impide la progresión de la replicación viral.<p>
+					<p> La estructura cristalina de CoV-2 PLpro se obtuvo del Protein Data Bank <a href= "https://www.wwpdb.org/pdb?id=pdb_00006w9c">(LINK)</a> cuyo código en el Protein Data Bank es  6W9C, misma estructura que se presenta en la Figura 5. La estructura se replicó y posteriormente se realizó una animación con el programa PyMOL, en esta animación se aprecia que CoV-2 PLpro alberga 3 dominios; dominio de escisión catalítica, dominio de unión a Zn lábil y dominio de ubiquitina.<p>
+					<p> (Figura 5)
+					<p> Figura 5. Réplica de estructura cristalina de SARS-CoV-2 PL pro<p>
+					<h3> Figura 6 </h3>
+					<p> Poreba y col. (2020) desarrollaron pequeños péptidos diseñados racionalmente como inhibidores basados en sustratos de PLpro de los virus de la familia del SARS y exhiben una alta selectividad hacia la unión de PLpro, lo que resulta en interferencia de la replicación viral. Así mismo, Rut y col. (2020) reportaron dos tetrapéptidos como inhibidores de CoV-2 PLpro que inhiben fuertemente la replicación viral in vitro y líneas celulares, estos tetrapéptidos son VIR250 y VIR251.<p>
+					<p> El tetrapéptido VIR251 tiene una eficacia más potente pero una selectividad relativamente menor hacia la unión de CoV PLpro que el VIR250. Esto último, se cree que se debe a la diferente orientación de homotirosina (hTyr) respecto a Abu (Bth) en el sitio catalítico.<p>
+					<p> La estructura cristalina del complejo VIR251 unido a CoV-2 PLpro mostrada en la Figura 6, proporciona un mapa completo del sitio activo con inhibidor, esto puede orientar el diseño y desarrollo de fármacos anti-COVID-19 basados en sustratos con potente eficacia y alta selectividad. <p>
+					<p> (Figura 6)<p>
+					<p> Figura 6. SARS-CoV-2 PLpro en un complejo con el inhibidor peptídico VIR251, Maiti(2020). PDB: 6WX4.<p>
+					<h3> Figura 7 </h3>
+					<p> (Figura 7)<p>
+					<p> Figura 7. Replicación y animación de 6WX4 realizado con el programa PyMOL.<p>
+					<p> Los sitios Zn lábiles putativos (representados con esferas grises en la animación) también se encuentran en otros subdominios como nsp3, nsp10 y nsp13, que también serían dianas farmacológicas prometedoras.<p>
+					<p> Las réplicas y animaciones se realizaron con ayuda del programa PyMOL y con códigos de Protein Data Bank en los artículos consultados, mismos que se citan en el texto.<p>
+					<h3> Simulaciones de acoplamiento con inhibidores de proteasa HCV NS3 / 4a</h3> 
+					<p> Se han utilizaron cálculos de simulación de acoplamiento para predecir poses de estado ligado para varios fármacos inhibidores de la proteasa NS3 / 4A del VHC. Estas moléculas fueron compiladas a partir de bases de datos públicas. Todos estos medicamentos han sido aprobados para al menos ensayos clínicos de fase 1; algunos son medicamentos recetados aprobados por la FDA que son útiles para tratar la hepatitis C. Se llevaron a cabo cálculos de acoplamiento del inhibidor para cada ligando, utilizando el mismo protocolo probado con el inhibidor de α-cetoamida 13b.<p>
+					<p> Ocho de las 12 moléculas estudiadas tienen puntuaciones de unión más favorables que el α-cetoamida inhibidor de 13b: con una puntuación de -7,19 kcal / mol para la estructura cristalina, y -9,17 kcal / mol para el mejor pose de puntuación. Para estos 8 inhibidores, la pose de estado unido con la mejor puntuación encaja bien en el sitio activo de SARS-CoV2 M pro y recapitula muchas de las interacciones clave ligando-proteína observadas en el complejo con el inhibidor de α-cetoamida 13b.<p>
+					<p> Las posturas de energía más bajos para cada uno de los ocho mejores ligandos de puntuación están cada uno en comparación con la de la estructura cristalina de rayos X de la 13b inhibidor de α-cetoamida unidos a SARS-COV2 M pro de la proteasa y también se muestran detalles de las interacciones intermoleculares.<p>
+					<p> En este análisis, se prestó especial atención a los detalles clave de la pose de "energía más baja", incluidas las interacciones con las cadenas laterales de los residuos de la díada catalítica His41 y Cys145, y las interacciones con enlaces de hidrógeno con las amidas de la columna vertebral de Gly143, Ser144 y Cys145, que forman el agujero oxianiónico de esta cisteína proteasa. Hasta donde sabemos, ninguno de estos fármacos forma complejos covalentes con M pro.<p>
+					<p> Mostraremos uno de los 8 fármacos de este estudio.<p>
+					<p> Las simulaciones de acoplamiento con sovaprevir (ID de ligando SOV) proporcionaron la pose con la energía de unión más baja predicha, -11.01 kcal / mol. En esta pose (Figura 8), SOV adopta una conformación similar al inhibidor 13b en la cavidad de unión, con muchas interacciones análogas con M pro. El ligando ocupa el agujero oxianiónico de la proteasa, formando enlaces de hidrógeno con las amidas de la cadena principal de Gly143, Ser144 y Cys145. El átomo de N ε de His41 también forma enlaces de hidrógeno directos con el ligando. El tiol azufre del residuo catalítico Cys145 no contacta directamente con el ligando; sin embargo, Cys145 está ocluido por el ligando unido, lo que dificultaría el acceso al tiol por un sustrato. Los residuos del bolsillo del sustrato S1 Phe140, Met165 y Glu166 también interactúan con este ligando.<p>
+					<p> (Figura 8)<p>
+					<p> Figura 8. (Bafna, Krug & Montelione, 2020)<p>
+					<p> (Figura 9)<p>
+					<p> Fig. 9. (Réplica)<p>
+					<p> Replicación de la Figura 8 lo primero que se hizo fue descargar el formato PDB de la proteasa principal del SARS-CoV2, misma que encontramos en el Protein Data Bank <a href= "https://www.rcsb.org/structure/6Y2F">(LINK)</a> con su respectivo código 6Y2F, luego con la ayuda de la aplicación PyMol abrimos la imagen y la mostramos en modo “cartoon” de color gris, después seleccionamos los residuos O6K (ligando) y los mostramos de modo “stick” en colores por elemento, así mismo mostramos los detalles de las interacciones atómicas en de menor energía de estos inhibidores de la proteasa del VHC. Los enlaces de hidrógeno y las interacciones hidrófobas entre el fármaco y la enzima se muestran con líneas continuas amarillas y líneas discontinuas negras, respectivamente. Las cadenas laterales de los residuos catalíticos His41 y Cys145 están marcadas, junto con otros residuos de proteínas que forman interacciones clave con estos fármacos.<p>
+					<h3> Conclusión</h3>
+					<p> La solución presentada en el artículo en que se basa nuestro proyecto (Bafna, Krug & Montelione, 2020) nos dice que ante lo tardado sería el desarrollar un nuevo antiviral, y la gran similitud encontrada entre la proteasa del SARS-CoV2 con la del Hepatitis C, se podría tratar de probar la efectividad del tratamiento ya existente del Hepatitis C para tratar el SARS-CoV2.<p>
+					<h4> Referencias</h4>
+						<p> Who.int. 2020. Coronavirus. [online] Available at: <https://www.who.int/health-topics/coronavirus> [Accessed 13 August 2020].<p>
+						<p> SRAS | Información básica sobre el SRAS | CDC. (2020). Retrieved 13 August 2020, from https://www.cdc.gov/sars/about/fs-sars-sp.html<p>
+						<p> Coronavirus | Human Coronavirus Types | CDC. (2020). Retrieved 13 August 2020, from https://www.cdc.gov/coronavirus/types.html<p>
+						<p> Bafna, K., Krug, R. M., & Montelione, G. T. (2020). Structural Similarity of SARS-CoV2 Mpro and HCV NS3/4A Proteases Suggests New Approaches for Identifying Existing Drugs Useful as COVID-19 Therapeutics. ChemRxiv : the preprint server for chemistry, 10.26434/chemrxiv.12153615.v1. https://doi.org/10.26434/chemrxiv.12153615<p>
+						<p> COVID-19: Equipos de protección individual (EPI) ante el riesgo de enfermedad por el nuevo coronavirus 2019-nCoV. (2020). Retrieved 13 August 2020, from https://www.interempresas.net/Proteccion-laboral/Articulos/299490-COVIT-19-Equipos-proteccion-individual-(EPI)-riesgo-enfermedad-coronavirus-2019-nCoV.html<p>
+						<p> Zhang, Y., Kutateladze, T.G. Molecular structure analyses suggest strategies to therapeutically target SARS-CoV-2. Nat Commun 11, 2920 (2020). https://doi.org/10.1038/s41467-020-16779-4<p>
+						<p> Wu, C., Liu, Y., Yang, Y., Zhang, P., Zhong, W., Wang, Y., … Li, H. (2020). Analysis of therapeutic targets for SARS-CoV-2 and discovery of potential drugs by computational methods. Acta Pharmaceutica Sinica B, 10(5), 766-788. https://doi.org/10.1016/j.apsb.2020.02.008<p>
+						<p> Department of Chemistry and Chemical Biology, Center for Biotechnology and Interdisciplinary Sciences, Rensselaer Polytechnic Institute, Troy, New York, 12180, Department of Molecular Biosciences, John Ring LaMontagne Center for Infectious Disease, Institute for Cellular and Molecular Biology, University of Texas at Austin, Austin, Texas 78712 USA., Department of Molecular Biosciences, John Ring LaMontagne Center for Infectious Disease, Institute for Cellular and Molecular Biology, University of Texas at Austin, 2500, Robert M. Krug, Ph.D, & Gaetano T. Montelione, Ph.D. (2020, 21 abril). Structural Similarity of SARS-CoV2 Mpro and HCV NS3/4A Proteases Suggests New Approaches for Identifying Existing Drugs Useful as COVID-19 Therapeutics. Recuperado 14 de agosto de 2020, de https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7263768/<p>
+						<p> Anand K., Palm G. J., Mesters J. R., Siddell S. G., Ziebuhr J. and Hilgenfeld R. Structure of coronavirus main proteinase reveals combination of a chymotrypsin fold with an extra alpha-helical domain. EMBO J 2002, 21: 3213–3224. 10.1093/emboj/cdf327 [PMC free article] [PubMed] [CrossRef] [Google Scholar]<p>
+						<p> Maiti B. K. (2020). Can Papain-like Protease Inhibitors Halt SARS-CoV-2 Replication?. ACS Pharmacology & Translational Science, acsptsci.0c00093. https://doi.org/10.1021/acsptsci.0c00093<p>
 
 
 
-
+					
+ 
 		
 		</div>
 		<div id="sidebar">
@@ -92,13 +143,13 @@ Released   : 20140221
 					<h2>Integer gravida</h2>
 				</div>
 				<ul class="style2">
-					<li><a href="#">Introducción</a></li>
-					<li><a href="#">CoV</a></li>
-					<li><a href="#">Problemática</a></li>
-					<li><a href="#">Quam</a></li>
-					<li><a href="#">Amet</a></li>
-					<li><a href="#">Quam</a></li>
-					<li><a href="#">Consequat</a></li>
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
 				</ul>
 			</div>
 		</div>
@@ -133,7 +184,7 @@ Released   : 20140221
 				</div>
 				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
 				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
-				<a href="https://www.facebook.com/frediie.a.santos" class="icon icon-plus-sign button">Contacto</a> </div>
+				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
 		</div>
 	</div>
 
