--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@ Released   : 20140221
 				<div class="title">
 					<h2>Fredie</h2>
 				</div>
-				<a href="#" class="image image-full"><img src="images/pic05.jpg" alt="" /></a>
-				<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
-				<a href="#" class="icon icon-plus-sign button">Read More</a> </div>
+				<a href="#" class="image image-full"><img src="https://raw.githubusercontent.com/Fredie03/Challenge_CdCMx_Team18/master/images/Image_Fredie.JPG" alt="" /></a>
+				<p>Estudiante de Ingeniería en Biotecnología en la Universidad Autónoma de Yucatán.</p>
+				<a href="https://www.facebook.com/frediie.a.santos" class="icon icon-plus-sign button">Contacto</a> </div>
 		</div>
 	</div>
 
